--- a/examples/docker-compose/webauthn-proxy-portmap/webauthn-proxy-static/authenticated.html
+++ b/examples/docker-compose/webauthn-proxy-portmap/webauthn-proxy-static/authenticated.html
@@ -1,6 +1,8 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebAuthn Proxy Authenticated</title>
     <link rel="icon" type="image/x-icon" href="/webauthn/static/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="/webauthn/static/styles.css" />
@@ -10,7 +12,7 @@
   <body>
     <div id="form">
       <div id="successMessages" class="successMessageText">
-        Successfully Authenticated
+        Successfully authenticated
       </div>
       <br />
       Redirecting to the <a href="/">home page</a>...
