--- a/examples/docker-compose/webauthn-proxy-portmap/webauthn-proxy-static/redirect-login.html
+++ b/examples/docker-compose/webauthn-proxy-portmap/webauthn-proxy-static/redirect-login.html
@@ -1,6 +1,8 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebAuthn Proxy Redirect to Login URL</title>
     <link rel="stylesheet" type="text/css" href="/webauthn/static/styles.css" />
 
