--- a/examples/docker-compose/webauthn-proxy-portmap/webserver-public/index.html
+++ b/examples/docker-compose/webauthn-proxy-portmap/webserver-public/index.html
@@ -4,7 +4,7 @@
     <title>Hello world</title>
 
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <style type="text/css">
       body,
