Set max-width 100% for title-image

--- a/examples/docker-compose/webauthn-proxy-portmap/webauthn-proxy-static/login.html
+++ b/examples/docker-compose/webauthn-proxy-portmap/webauthn-proxy-static/login.html
@@ -67,7 +67,7 @@
   </head>
   <body>
     <div id="form">
-      <img src="/webauthn/static/title-image.png" />
+      <img src="/webauthn/static/title-image.png" style="max-width: 100%" />
       <div id="errorMessages" class="errorMessageText"></div>
       <div id="successMessages" class="successMessageText"></div>
       <br />
