Bulma PWA h2 subtitle

--- a/examples/bulma-pwa/app/index.html
+++ b/examples/bulma-pwa/app/index.html
@@ -133,7 +133,7 @@
       <div class="container">
         <h1 class="title">My Bulma PWA</h1>
 
-        <p class="subtitle">This is the <strong>subtitle</strong>.</p>
+        <h2 class="subtitle">This is the <strong>subtitle</strong>.</h2>
 
         <div id="notifPWA" class="notification is-primary" hidden>
           <button class="delete"></button>
