--- a/examples/bulma-pwa/app/index.html
+++ b/examples/bulma-pwa/app/index.html
@@ -18,6 +18,18 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
     />
 
+    <style type="text/css">
+      /* Generated using the Customizer on https://bulma.io/ */
+      :root {
+        --bulma-primary-h: 171deg;
+        --bulma-primary-s: 100%;
+        --bulma-primary-l: 41%;
+        --bulma-link-h: 171deg;
+        --bulma-link-s: 100%;
+        --bulma-link-l: 41%;
+      }
+    </style>
+
     <script type="text/javascript">
       class PWAInstallPrompt {
         static installPrompt = null;
@@ -179,10 +191,10 @@
 
         <div class="field is-grouped">
           <div class="control">
-            <button class="button is-link">Submit</button>
+            <button class="button is-primary">Submit</button>
           </div>
           <div class="control">
-            <button class="button is-link is-light">Cancel</button>
+            <button class="button is-light">Cancel</button>
           </div>
         </div>
       </div>
