Use console.error to log errors

--- a/examples/bulma-pwa/app/index.html
+++ b/examples/bulma-pwa/app/index.html
@@ -84,7 +84,7 @@
               );
             })
             .catch((error) => {
-              console.log(error);
+              console.error(error);
               document.body.textContent = "ERROR: " + error;
             });
         }
