--- a/python-scripts/cslcmgr/static/index.html
+++ b/python-scripts/cslcmgr/static/index.html
@@ -164,7 +164,7 @@
         }
 
         static error(error) {
-          console.log(error);
+          console.error(error);
           this.showViewError(error);
         }
 
